feat: add dicom convert to fhir API
